--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --no-stdin",
+    "dev": "NODE_ENV=dev nodemon --no-stdin",
     "build": "tsc",
-    "prod" : "npm run build && node dist/main.js"
+    "prod": "npm run build && node dist/main.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
