--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "SET NODE_ENV=dev&&nodemon --no-stdin",
-    "build": "tsc",
+    "build": "tsc --version",
     "prod": "npm run build && node dist/main.js"
   },
   "keywords": [],
@@ -25,6 +25,6 @@
     "@types/inquirer": "^9.0.3",
     "@types/node": "^18.11.9",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   }
 }
