--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "SET NODE_ENV=dev&&nodemon --no-stdin",
-    "build": "tsc --version",
+    "build": "tsc",
     "prod": "npm run build && node dist/main.js"
   },
   "keywords": [],
