--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "SET NODE_ENV=dev&&nodemon --no-stdin",
+    "dev": "SET NODE_ENV=dev&&nodemon src/main.ts --no-stdin",
     "build": "tsc",
     "prod": "npm run build && node dist/main.js"
   },
