--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@tonaljs/tonal": "^4.6.5",
     "@types/readline-sync": "^1.4.4",
+    "ascii-table": "^0.0.9",
+    "ascii-table3": "^0.7.8",
     "chalk": "^4.1.2",
     "easymidi": "^3.0.1",
     "inquirer": "^8.2.5",
