--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    "typescript.tsdk": "node_modules\\typescript\\lib"
+    "typescript.tsdk": "node_modules\\typescript\\lib",
+    "json.schemas": [
+        {
+          "fileMatch": [
+            "/harmonic-progressions.json"
+          ],
+          "url": "./harmonic-progressions-schema.json"
+        }
+      ]   
 }
