--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "SET NODE_ENV=dev&&nodemon src/main.ts --no-stdin",
     "build": "tsc",
-    "prod": "npm run build && node dist/main.js"
+    "prod": "npm run build && node dist/main.js",
+    "test": "vitest --run --reporter verbose"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
     "@types/inquirer": "^9.0.3",
     "@types/node": "^18.11.9",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "vitest": "^0.25.3"
   }
 }
