fix build path, rename files

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "SET NODE_ENV=dev&&nodemon src/main.ts --no-stdin",
     "build": "tsc",
-    "prod": "npm run build && node dist/main.js",
+    "prod": "npm run build && node dist/src/main.js",
     "test": "vitest --run --reporter verbose"
   },
   "keywords": [],
